--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@fullcalendar/daygrid": "^5.10.1",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
@@ -22,6 +23,7 @@
     "prettier-plugin-svelte": "^2.4.0",
     "svelte": "^3.34.0",
     "svelte-check": "^2.2.6",
+    "svelte-fullcalendar": "^1.1.1",
     "svelte-preprocess": "^4.9.4",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
