--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   "type": "module",
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
     "@lukeed/uuid": "^2.0.0",
     "cookie": "^0.4.1"
   }
