--- a/package.json
+++ b/package.json
@@ -11,20 +11,22 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@fullcalendar/daygrid": "^5.10.1",
     "@sveltejs/kit": "next",
     "@types/cookie": "^0.4.1",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
+    "attractions": "^3.5.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
+    "sass": "^1.43.4",
     "svelte": "^3.34.0",
     "svelte-check": "^2.2.6",
     "svelte-fullcalendar": "^1.1.1",
-    "svelte-preprocess": "^4.9.4",
+    "svelte-preprocess": "^4.9.8",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
   },
@@ -32,9 +34,11 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.5.0",
     "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
     "@fullcalendar/list": "^5.10.1",
     "@fullcalendar/timegrid": "^5.10.1",
     "@lukeed/uuid": "^2.0.0",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "date-fns": "^2.26.0"
   }
 }
